--- a/client/src/sass/main-components.scss
+++ b/client/src/sass/main-components.scss
@@ -47,6 +47,32 @@
   height: 100%;
 }
 
+.fetching {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+  position: absolute;
+  left: 50%;
+  margin: -70px 0 0 -50px;
+  top: 50%;
+  border: 4px dashed $yellow;
+  animation-name: ci-fetching;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes ci-fetching {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg) scale(1.3);
+  }
+}
+
 .ci-btn {
   display: inline-flex;
   align-items: center;
