--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
   font-feature-settings: 'liga', 'kern';
   font-size: 13px;
   line-height: 1.2;
-  background: #fff;
+  background: var(--white);
 }
 
 @font-face {
@@ -41,4 +41,21 @@ body {
 html,
 #root {
   height: 100%;
+}
+
+:root {
+  --yellow: #FFCC00;
+  --white: #FFFFFF;
+  --black: #000000;
+  --red: #FF3333;
+  --green: #00B341;
+  --orange: #FF9A00;
+  --primary1: #7F8285;
+  --primary2: #F0F2F3;
+  --primary3: #7F7F7F;
+  --btn: #E6E6E6;
+  --btn-hover: #DBDBDB;
+  --btn-yellow-hover: #F2C200;
+  --btn-disabled: #F2F2F2;
+  --btn-focus: #B3B3B3;
 }
