--- a/client/src/components/BuildItem/BuildItem.scss
+++ b/client/src/components/BuildItem/BuildItem.scss
@@ -1,5 +1,3 @@
-@import '../../sass/constants.scss';
-
 .build {
   display: flex;
   padding: 12px 24px;
@@ -11,7 +9,7 @@
   cursor: pointer;
   justify-content: space-between;
   text-decoration: none;
-  color: $black;
+  color: var(--black);
 
   &:hover {
     box-shadow: 0 0 1px rgba(67, 68, 69, 0.3), 0 2px 8px rgba(67, 68, 69, 0.3);
@@ -114,7 +112,7 @@
   }
 
   &__info.status-ok .build__info-number {
-    color: $green;
+    color: var(--green);
   }
 
   &__info.status-ok .build__info-icon {
@@ -123,7 +121,7 @@
   }
 
   &__info.status-wait .build__info-number {
-    color: $orange;
+    color: var(--orange);
   }
 
   &__info.status-wait .build__info-icon {
@@ -132,7 +130,7 @@
   }
 
   &__info.status-fail .build__info-number {
-    color: $red;
+    color: var(--red);
   }
 
   &__info.status-fail .build__info-icon {
@@ -163,7 +161,7 @@
     }
 
     &__info-status {
-      border-bottom: 1px solid #F0F2F3;
+      border-bottom: 1px solid var(--primary2);
       padding-bottom: 8px;
       margin-bottom: 8px;
     }
