--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,14 +1,18 @@
-@import '../../sass/constants.scss';
-
 .footer {
-  background: $blue-grey;
+  background: var(--primary2);
   height: 32px;
   width: 100%;
-  color: $primary1;
+  color: var(--primary1);
   line-height: 18px;
 
-  .wrapper {
+  &__wrapper {
+    max-width: 1024px;
+    padding: 0 100px;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    margin: auto;
     flex-direction: row;
   }
 
@@ -28,12 +32,19 @@
   }
 }
 
+@media screen and (max-width: 992px) {
+  .footer__wrapper {
+    max-width: 100%;
+    padding: 0 16px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .footer {
     height: 68px;
     padding: 12px 0;
 
-    .wrapper {
+    &__wrapper {
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
