--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,5 +1,3 @@
-@import '../../sass/constants.scss';
-
 .form {
   margin-top: 4px;
   max-width: 474px;
@@ -21,29 +19,29 @@
   padding: 8px 32px 8px 12px;
 
   &::-webkit-input-placeholder {
-    color: $black;
+    color: var(--black);
     opacity: .2;
   }
 
   &:-ms-input-placeholder {
-    color: $black;
+    color: var(--black);
     opacity: .2;
   }
 
   &::-moz-placeholder {
-    color: $black;
+    color: var(--black);
     opacity: .2;
   }
 
   &:-moz-placeholder {
-    color: $black;
+    color: var(--black);
     opacity: .2;
   }
 }
 
 .ci-input:focus {
   outline: none;
-  border: 2px solid #B3B3B3;
+  border: 2px solid var(--btn-focus);
 }
 .ci-input:focus::-moz-placeholder {
   color: transparent;
@@ -102,7 +100,7 @@ input[type=number] {
 
   .label i {
     margin-left: 2px;
-    color: $red;
+    color: var(--red);
     font-style: normal;
   }
 }
