--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -1,5 +1,3 @@
-@import '../../sass/constants.scss';
-
 .modal {
   width: 100%;
   height: 100%;
@@ -23,7 +21,7 @@
     min-height: 190px;
     border-radius: 4px;
     padding: 20px 20px 0;
-    background: $white;
+    background: var(--white);
     box-shadow: 0 0 1px rgba(67, 68, 69, 0.3), 0 6px 16px rgba(67, 68, 69, 0.3);
     transition: 0.5s all;
     transform: scale(0.5);
