--- a/client/src/pages/BuildDetail/BuildDetail.scss
+++ b/client/src/pages/BuildDetail/BuildDetail.scss
@@ -1,5 +1,3 @@
-@import '../../sass/constants.scss';
-
 .detail {
   width: 100%;
   height: 100%;
@@ -31,13 +29,13 @@
   }
 
   .build__info-status {
-    border-bottom: 1px solid #F0F2F3;
+    border-bottom: 1px solid var(--primary2);
     padding-bottom: 8px;
     margin-bottom: 8px;
   }
 
   &__logs {
-    background: #F2F2F2;
+    background: var(--btn-disabled);
     border-radius: 6px;
     padding: 8px 12px;
     max-height: calc(100% - 178px);
