--- a/client/src/pages/Settings/Settings.scss
+++ b/client/src/pages/Settings/Settings.scss
@@ -1,11 +1,9 @@
-@import '../../sass/constants.scss';
-
 .settings {
   width: 100%;
   line-height: 18px;
 
   .header__title {
-    color: $primary1;
+    color: var(--primary1);
   }
 
   &__subtitle {
