--- a/client/src/sass/main-components.scss
+++ b/client/src/sass/main-components.scss
@@ -1,16 +1,14 @@
-@import './constants.scss';
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 
   ::-webkit-scrollbar-track {
-    background-color: #F0F2F3;
+    background-color: var(--primary2);
   }
 
   ::-webkit-scrollbar {
-    background-color: #F0F2F3;
+    background-color: var(--primary2);
 
     &:vertical {
       width: 14px;
@@ -24,7 +22,7 @@
   ::-webkit-scrollbar-thumb {
     background-color: #cdcdcd;
     border-radius: 8px;
-    border: 4px solid #F0F2F3;
+    border: 4px solid var(--primary2);
   }
 }
 
@@ -55,7 +53,7 @@
   left: 50%;
   margin: -70px 0 0 -50px;
   top: 50%;
-  border: 4px dashed $yellow;
+  border: 4px dashed var(--yellow);
   animation-name: ci-fetching;
   animation-duration: 2s;
   animation-iteration-count: infinite;
@@ -78,28 +76,28 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  color: $black;
-  background: #E6E6E6;
-  border: 2px solid #E6E6E6;
+  color: var(--black);
+  background: var(--btn);
+  border: 2px solid var(--btn);
   cursor: pointer;
   text-align: left;
   outline: none;
   text-decoration: none;
 
   &:hover {
-    background: #DBDBDB;
-    border: 2px solid #DBDBDB;
+    background: var(--btn-hover);
+    border: 2px solid var(--btn-hover);
   }
 
   &:disabled {
-    background: #F2F2F2;
-    border: 2px solid #F2F2F2;
-    color: #7F7F7F;
+    background: var(--btn-disabled);
+    border: 2px solid var(--btn-disabled);
+    color: var(--primary3);
     cursor: auto;
   }
 
   &:focus {
-    border: 2px solid #B3B3B3;
+    border: 2px solid var(--btn-focus);
   }
 
   &__small {
@@ -114,18 +112,18 @@
   }
 
   &__yellow{
-    background: $yellow;
-    border: 2px solid $yellow;
+    background: var(--yellow);
+    border: 2px solid var(--yellow);
 
     &:hover {
-      background: #F2C200;
-      border: 2px solid #F2C200;
+      background: var(--btn-yellow-hover);
+      border: 2px solid var(--btn-yellow-hover);
     }
 
     &:disabled {
-      background: #F2F2F2;
-      border: 2px solid #F2F2F2;
-      color: #7F7F7F;
+      background: var(--btn-disabled);
+      border: 2px solid var(--btn-disabled);
+      color: var(--primary3);
       cursor: auto;
     }
 
