--- a/client/src/pages/BuildDetail/BuildDetail.scss
+++ b/client/src/pages/BuildDetail/BuildDetail.scss
@@ -2,10 +2,28 @@
   width: 100%;
   height: 100%;
 
+  .header__link {
+    color: var(--black);
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+
+    .header__title {
+      width: 100%;
+    }
+  }
+
   .build {
     margin: 8px 0 12px;
     flex-direction: column;
     padding: 12px 16px 12px 56px;
+    cursor: auto;
+
+    &:hover {
+      box-shadow: 0 0 1px rgba(67, 68, 69, 0.3), 0 1px 1px rgba(67, 68, 69, 0.3);
+    }
   }
 
   .build__info {
